packages/typ/tests/fixtures/diagnostics/0327_fun_explicit_poly_returns_bool_09.ml.expected
File "0327_fun_explicit_poly_returns_bool_09.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0327_fun_explicit_poly_returns_bool_09 is not a valid module name.

File "0327_fun_explicit_poly_returns_bool_09.ml", line 1, characters 30-43:
1 | let bad_iota : 'a. 'a -> 'a = fun _ -> true
                                  ^^^^^^^^^^^^^
Error: This definition has type bool -> bool which is less general than
         'a. 'a -> 'a
       The type bool is not a type variable.
